--- a/src/assets/themes.css
+++ b/src/assets/themes.css
@@ -11,7 +11,7 @@
 /* Тёмная тема */
 [data-theme="dark"] {
     --background-color: #343a40;
-    --text-color: #ffffff;
+    --text-color: #1b1b1b;
     --button-primary-bg: #17a2b8;
     --button-primary-text: #ffffff;
 }
